Fix functionality of get(); optimize code by using EnumSet and forEach loop.