@@ -17,6 +17,7 @@ import ru.javawebinar.topjava.util.ValidationUtils;
 
 import java.sql.Types;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Repository
 @Transactional(readOnly = true)
@@ -69,15 +70,20 @@ public class JdbcUserRepository implements UserRepository {
 
     @Override
     public User get(int id) {
-        List<User> users = jdbcTemplate.query("SELECT u.*, ur.role FROM users u " +
+        List<User> users = jdbcTemplate.query(
+                "SELECT u.*, ur.role FROM users u " +
                         "LEFT JOIN user_role ur ON u.id = ur.user_id " +
                         "WHERE u.id=?",
                 (resultSet, rowNum) -> {
                     User user = ROW_MAPPER.mapRow(resultSet, rowNum);
                     String role = resultSet.getString("role");
                     if (role != null) {
-                        assert user != null;
+                        if (user.getRoles() == null) {
+                            user.setRoles(new HashSet<>());
+                        }
                         user.getRoles().add(Role.valueOf(role));
+                    } else {
+                        user.setRoles(new HashSet<>(Collections.singletonList(Role.USER)));
                     }
                     return user;
                 }, id);
@@ -85,12 +91,17 @@ public class JdbcUserRepository implements UserRepository {
         if (users.isEmpty()) {
             return null;
         } else {
-            User user = users.getFirst();
-            if (users.size() > 1) {
-                for (int i = 1; i < users.size(); i++) {
-                    user.getRoles().addAll(users.get(i).getRoles());
-                }
-            }
+            User user = users.get(0);
+            users.stream()
+                    .skip(1)
+                    .map(User::getRoles)
+                    .filter(Objects::nonNull)
+                    .forEach(roles -> {
+                        if (user.getRoles() == null) {
+                            user.setRoles(new HashSet<>());
+                        }
+                        user.getRoles().addAll(roles);
+                    });
             return user;
         }
     }
@@ -100,8 +111,11 @@ public class JdbcUserRepository implements UserRepository {
         List<User> users = jdbcTemplate.query("SELECT * FROM users WHERE email=?", ROW_MAPPER, email);
         User user = DataAccessUtils.singleResult(users);
         if (user != null) {
-            List<Role> roles = jdbcTemplate.queryForList("SELECT role FROM user_role WHERE user_id=?", Role.class, user.getId());
-            user.setRoles(new HashSet<>(roles));
+            List<String> roleNames = jdbcTemplate.queryForList("SELECT role FROM user_role WHERE user_id=?", String.class, user.getId());
+            EnumSet<Role> roles = roleNames.stream()
+                    .map(Role::valueOf)
+                    .collect(Collectors.toCollection(() -> EnumSet.noneOf(Role.class)));
+            user.setRoles(roles);
         }
         return user;
     }
@@ -110,18 +124,20 @@ public class JdbcUserRepository implements UserRepository {
     public List<User> getAll() {
         List<User> users = jdbcTemplate.query(
                 "SELECT * FROM users ORDER BY name, email", ROW_MAPPER);
-        Map<Integer, List<Role>> userRolesMap = new HashMap<>();
+        Map<Integer, EnumSet<Role>> userRolesMap = new HashMap<>();
         jdbcTemplate.query(
                 "SELECT user_id, role FROM user_role",
                 (resultSet, rowNum) -> {
                     int userId = resultSet.getInt("user_id");
                     Role role = Role.valueOf(resultSet.getString("role"));
-                    userRolesMap.computeIfAbsent(userId, k -> new ArrayList<>()).add(role);
+                    userRolesMap
+                            .computeIfAbsent(userId, k -> EnumSet.noneOf(Role.class))
+                            .add(role);
                     return null;
                 });
         users.forEach(user -> {
-            List<Role> roles = userRolesMap.get(user.getId());
-            user.setRoles(Objects.requireNonNullElse(roles, Collections.emptyList()));
+            EnumSet<Role> roles = userRolesMap.getOrDefault(user.getId(), EnumSet.noneOf(Role.class));
+            user.setRoles(roles);
         });
         return users;
     }
